added NN colors

--- a/content/projects/neural net visualizer.html
+++ b/content/projects/neural net visualizer.html
@@ -1,6 +1,7 @@
 ---
 Title: Neural Net Visualizer
 Description: An interactive tool to visualize the training of neural networks.
+Draft: false
 ---
 
 <p style="display: none">
