--- a/content/projects/neural net visualizer.html
+++ b/content/projects/neural net visualizer.html
@@ -118,12 +118,6 @@ Draft: false
 </div>
 
 <div class="divider"></div>
-<p id="statsText">
-  Iterations: <span id="trainingIterations">0</span> | Accuracy:
-  <span id="accuracy">0</span>%
-</p>
-
-<div class="divider"></div>
 
 <div id="gaWrapper">
   <div id="circle"></div>
@@ -245,6 +239,12 @@ Draft: false
     </div>
   </div>
 </div>
+<div class="divider"></div>
+<p id="statsText">
+  Iterations: <span id="trainingIterations">0</span> | Accuracy:
+  <span id="accuracy">0</span>%
+  | Loss: <span id="lossText">N/A</span>
+</p>
 <div class="divider"></div>
 <script src="../neuralNetCode/neuralNet.js"></script>
 
