--- a/content/projects/neural net visualizer.html
+++ b/content/projects/neural net visualizer.html
@@ -57,6 +57,7 @@ Draft: false
 <div id="trainingData">
   <div class="trainingImage">
     <img
+      class="selected"
       src="../neuralNetCode/images/sprite0.png"
       alt="5x5 Pixel Image of the Numeral 0"
     />
