--- a/content/projects/neural net visualizer.html
+++ b/content/projects/neural net visualizer.html
@@ -247,8 +247,13 @@ Draft: false
   | Loss: <span id="lossText">N/A</span>
 </p>
 <div class="divider"></div>
-<script src="../neuralNetCode/neuralNet.js"></script>
+<div>
+  <canvas id="myChart"></canvas>
+</div>
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="../neuralNetCode/neuralNet.js"></script>
+<div class="divider"></div>
 <h2>About</h2>
 <p>
   This neural network is a simple classifier. It takes 5x5 pixel images as
