--- a/content/about.html
+++ b/content/about.html
@@ -13,7 +13,7 @@ ShowBreadCrumbs: false
 </style>
 
 <div id="introPara">
-    <img id="profilePic" src="/joel_peckham_laramie_software_developer.jpeg" alt="Portrait of Joel Peckham, a software developer based in Laramie, Wyoming.">
+    <img id="profilePic" src="/joel_peckham_laramie_software_developer_small.webp" alt="Portrait of Joel Peckham, a software developer based in Laramie, Wyoming.">
 
 <p>
     I'm a software developer and (previously) a graphic designer. I'm currently
