done for now. gonna walk dog

--- a/content/projects/8 Puzzle Solver.html
+++ b/content/projects/8 Puzzle Solver.html
@@ -1,6 +1,7 @@
 ---
 Title: 8 Puzzle Solver
 Description: A simple 8 puzzle solver. (With your choice of heuristic function and search algorithm!)
+Date: 2023-02-20
 ---
 <p id="Post preview text hack the frontmatter isn't working as I had expeced." class="invisible">A simple 8 puzzle solver. (With your choice of heuristic function and search algorithm!) | I first wrote a 8 puzzle solver some years in my university Artifical Intellegence class. 
   That version was a terminal program written in Python.</p>
