added resume and contact

--- a/content/about.html
+++ b/content/about.html
@@ -28,6 +28,16 @@ ShowBreadCrumbs: false
     developer. I'm very interested in AI and machine learning, but I'm also open
     to other opportunities.
   </p>
+  <h2>Contact</h2>
+  <ul>
+    <li>
+        Email: <a href="mailto:mail@jpeckham.com">mail@jpeckham.com</a>
+    </li>
+    <li>
+        Telephone: <a href="tel:13076311986">+1 (307) 631-1986</a> <br> (Text message preferred.)
+    </li>
+  </ul>
+
   <h2>Resume</h2>
 
   <div id="example1"></div>
