--- a/content/projects/8 Puzzle Solver.html
+++ b/content/projects/8 Puzzle Solver.html
@@ -3,7 +3,7 @@ Title: 8 Puzzle Solver
 Description: A simple 8 puzzle solver. (With your choice of heuristic function and search algorithm!)
 Date: 2023-02-20
 ---
-<p id="Post preview text hack the frontmatter isn't working as I had expeced." class="invisible">A simple 8 puzzle solver. (With your choice of heuristic function and search algorithm!) | I first wrote a 8 puzzle solver some years in my university Artifical Intellegence class. 
+<p id="Post preview text hack the frontmatter isn't working as I had expeced." class="invisible">A simple 8 puzzle solver. (With your choice of heuristic function and search algorithm!) | I first wrote an 8 puzzle solver some years in my university Artificial Intelligence class. 
   That version was a terminal program written in Python.</p>
 
 <link rel="stylesheet" href="../8puzzleCode/8puzzle.css" />
@@ -117,9 +117,8 @@ Date: 2023-02-20
 </script>
 <h2>About</h2>
 <p>
-  I first wrote a 8 puzzle solver some years in my university Artifical Intellegence class. 
-  That version was a terminal program written in Python. The purpose of that project was learning about 
-  – and then characterizing the performance of – different search algorithms and heuristic functions.
+  I first wrote an 8 puzzle solver some years in my university Artificial Intelligence class. 
+  That version was a terminal program written in Python. The purpose of that project was to learn about – and then characterize the performance of – different search algorithms and heuristic functions.
   Feel free to <a href="https://github.com/joelpeckham/8puzzle">get the code on Github.</a>
 </p>
 <p>Above is a web port of my python project. Enjoy solving puzzles and 
@@ -138,9 +137,9 @@ Date: 2023-02-20
   <li> A* Search </li>
 </ul>
 <p>
-  <strong>Breadth First Search</strong> is a simple search algorithm that explores the search space in a breadth first manner.
-  This means that it will explore all the nodes at a given depth before moving on to the next depth. In the case, a node represents
-  a state of the puzzle. This algorithm is guaranteed to find the shortest path to the goal state, but it is also the slowest of the three algorithms.
+  <strong>Breadth First Search</strong> is a simple search algorithm that explores the search space in a breadth-first manner.
+  This means that it will explore all the nodes at a given depth before moving on to the next depth. In this case, each node represents
+  some state of the puzzle. This algorithm is guaranteed to find the shortest path to the goal state, but it is also the slowest of the three algorithms.
 </p>
 <details open>
   <summary>Breadth First in Python</summary>
@@ -271,7 +270,7 @@ Date: 2023-02-20
 </style>
 <p>
   Using my old python program <a href="https://github.com/joelpeckham/8puzzle">here on Github,</a> 
-  I ran performance tests over <strong>500</strong> randomly generated puzzles.
+  I ran performance tests on over <strong>500</strong> randomly generated puzzles.
   I ran every solver and heuristic pair three times per puzzle and averaged the results before recording them.
   The results are shown below.
   <h3>Data</h3>
