--- a/content/about.html
+++ b/content/about.html
@@ -20,13 +20,12 @@ ShowBreadCrumbs: false
   />
 
   <p>
-    I'm a software developer and (previously) a graphic designer. I'm currently
-    located in Laramie, Wyoming and loving life! I graduated with a B.S. in
-    Computer Science from Southern Adventist Univeristy in May, 2022. When I'm
-    not coding, I'm probably probably outside hiking, rock climbing or skiing.
-    Professionally, I'm looking for a full-time position as a software
-    developer. I'm very interested in AI and machine learning, but I'm also open
-    to other opportunities.
+    I'm a software developer and (previously) a graphic designer. 
+    I'm currently located in Laramie, Wyoming, and loving life! 
+    I graduated with a B.S. in Computer Science from Southern Adventist University in May 2022. 
+    When I'm not coding, I'm probably outside hiking, rock climbing, or skiing. 
+    Professionally, I'm looking for a full-time position as a software developer. 
+    I'm very interested in AI and machine learning, but I'm also open to other opportunities.
   </p>
   <h2>Contact</h2>
   <ul>
