--- a/content/designPortfolio.html
+++ b/content/designPortfolio.html
@@ -7,7 +7,7 @@ ShowBreadCrumbs: false
     document.getElementById("top").classList.add("fadeInAfterSecs");
 </script>
 
-<meta http-equiv="refresh" content="0; url='/Joel_Peckham_Resume_2023.pdf'" />
+<meta http-equiv="refresh" content="0; url='/designPortfolio.pdf'" />
 <p>
   Please follow
   <a href="/designPortfolio.pdf">this link</a>.
