Updated NN invisible description.

--- a/content/projects/neural net visualizer.html
+++ b/content/projects/neural net visualizer.html
@@ -6,8 +6,9 @@ Date: 2023-03-05
 ---
 
 <p style="display: none">
-  An interactive tool to visualize the training of neural networks. This neural
-  network is a simple classifier. It takes 5x5 pixel images as input, and
+  An interactive tool to visualize the training of neural networks. 
+  Explore how inputs and outputs are represented in a classifier, and see how hidden nodes and weights change over time.
+  This neural network is a simple classifier. It takes 5x5 pixel images as input, and
   outputs the digit that each image represents. All 25 pixels of the image are
   fed into the neural network as input nodes.
 </p>
